--- a/.vscode/eComerce/index.html
+++ b/.vscode/eComerce/index.html
@@ -23,21 +23,21 @@
     <div class="images">
         <div>
             <img src="https://images.unsplash.com/photo-1503602642458-232111445657?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c2hvZXN8ZW58MHx8MHx8fDA%3D&w=1000&q=80" alt=" small table" width="300px" height="300px">
-            <h2>product title</h2>
-            <h2> description</h2>
-            <h2>price</h2>
+            <p>product title</p>
+            <p> description</p>
+            <p>price</p>
         </div>
         <div>
             <img src="https://images.unsplash.com/photo-1768641999760-6ba37484dd95?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDQ0fGhtZW52UWhVbXhNfHxlbnwwfHx8fHw%3D" alt=" small table" width="300px" height="300px">
-            <h2>product title</h2>
-            <h2> description</h2>
-            <h2>price</h2>
+            <p>product title</p>
+            <p> description</p>
+            <p>price</p>
         </div>
         <div>
             <img src="https://images.unsplash.com/photo-1768572413288-9d9b26e5b23d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM5fGhtZW52UWhVbXhNfHxlbnwwfHx8fHw%3D" alt=" small table" width="300px" height="300px">
-            <h2>product title</h2>
-            <h2> description</h2>
-            <h2>price</h2>
+            <p>product title</p>
+            <p> description</p>
+            <p>price</p>
         </div>
 
         </div>
